[tool.poetry]
name = "dca-ideas"
version = "0.1.0"
description = ""
authors = ["denisbrogg <denis.broggini@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
tqdm = "^4.64.0"
TA-Lib = "^0.4.24"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
